--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -5,7 +5,7 @@
     android:id="@+id/mainFragmentLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorAccent"
+    android:background="#FAFAFA"
     tools:context=".Fragments.MainFragment">
 
     <android.support.v4.widget.NestedScrollView
@@ -13,13 +13,15 @@
         android:layout_height="match_parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0">
 
         <android.support.constraint.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:paddingBottom="30dp">
 
 
             <TextView
@@ -31,9 +33,9 @@
                 android:layout_marginTop="16dp"
                 android:text="It's Friday Evening"
                 android:textAllCaps="false"
-                android:textColor="#000000"
+                android:textColor="#232323"
                 android:textSize="20sp"
-                android:textStyle="normal"
+                android:textStyle="normal|bold"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
@@ -51,9 +53,8 @@
             <FrameLayout
                 android:id="@+id/container_top_row"
                 android:layout_width="0dp"
-                android:layout_height="150dp"
+                android:layout_height="wrap_content"
                 android:layout_marginTop="12dp"
-                android:background="@color/colorAccentDark"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toStartOf="parent"
@@ -68,9 +69,9 @@
                 android:layout_marginTop="30dp"
                 android:text="Recent Activity"
                 android:textAllCaps="false"
-                android:textColor="#000000"
+                android:textColor="#232323"
                 android:textSize="20sp"
-                android:textStyle="normal"
+                android:textStyle="normal|bold"
                 app:layout_constraintStart_toStartOf="@+id/stationOneSubtextLabel"
                 app:layout_constraintTop_toBottomOf="@+id/container_top_row" />
 
@@ -86,9 +87,8 @@
             <FrameLayout
                 android:id="@+id/container_middle_row"
                 android:layout_width="0dp"
-                android:layout_height="150dp"
+                android:layout_height="wrap_content"
                 android:layout_marginTop="12dp"
-                android:background="@color/colorAccentDark"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toStartOf="parent"
@@ -101,11 +101,11 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="30dp"
-                android:text="Recent Activity"
+                android:text="Party Time"
                 android:textAllCaps="false"
-                android:textColor="#000000"
+                android:textColor="#232323"
                 android:textSize="20sp"
-                android:textStyle="normal"
+                android:textStyle="normal|bold"
                 app:layout_constraintStart_toStartOf="@+id/stationTwoSubtextLabel"
                 app:layout_constraintTop_toBottomOf="@+id/container_middle_row" />
 
@@ -114,16 +114,15 @@
                 android:layout_width="wrap_content"
                 android:layout_height="0dp"
                 android:layout_marginTop="3dp"
-                android:text="Recently played or added"
+                android:text="Up all night to get lucky"
                 app:layout_constraintStart_toStartOf="@+id/stationThreeLabel"
                 app:layout_constraintTop_toBottomOf="@+id/stationThreeLabel" />
 
             <FrameLayout
                 android:id="@+id/container_bottom_row"
                 android:layout_width="match_parent"
-                android:layout_height="150dp"
+                android:layout_height="wrap_content"
                 android:layout_marginTop="12dp"
-                android:background="@color/colorAccentDark"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toStartOf="parent"
