--- a/app/src/main/res/layout/fragment_details.xml
+++ b/app/src/main/res/layout/fragment_details.xml
@@ -17,8 +17,8 @@
 
         <TextView
             android:id="@+id/stationNameView"
-            android:layout_width="175dp"
-            android:layout_height="wrap_content"
+            android:layout_width="200dp"
+            android:layout_height="55dp"
             android:layout_gravity="top"
             android:layout_marginStart="20dp"
             android:layout_marginTop="20dp"
@@ -26,7 +26,9 @@
             android:maxLines="3"
             android:minLines="2"
             android:text="Flight Plan (Tunes for travel)"
-            android:textSize="20sp" />
+            android:textColor="#3A3A3A"
+            android:textSize="20sp"
+            android:textStyle="bold" />
 
         <ImageView
             android:id="@+id/stationImgView"
