--- a/app/src/main/res/layout/fragment_details_flight_plan.xml
+++ b/app/src/main/res/layout/fragment_details_flight_plan.xml
@@ -1,16 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-    <!-- TODO: Update blank fragment layout -->
-
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/detailScrollView"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_marginEnd="15dp"
-    android:layout_marginStart="15dp"
-    android:layout_marginTop="80dp"
     android:fadeScrollbars="true"
     android:scrollbarAlwaysDrawHorizontalTrack="false"
     android:scrollbarAlwaysDrawVerticalTrack="false"
@@ -33,8 +27,7 @@
             android:layout_height="match_parent"
             android:layout_marginBottom="10dp"
             android:layout_marginEnd="1dp"
-            android:layout_marginStart="1dp"
-            android:layout_marginTop="1dp">
+            android:layout_marginStart="1dp">
 
             <android.support.constraint.ConstraintLayout
                 android:layout_width="match_parent"
@@ -129,8 +122,7 @@
             android:layout_height="match_parent"
             android:layout_marginBottom="10dp"
             android:layout_marginEnd="1dp"
-            android:layout_marginStart="1dp"
-            android:layout_marginTop="1dp">
+            android:layout_marginStart="1dp">
 
             <android.support.constraint.ConstraintLayout
                 android:layout_width="match_parent"
@@ -225,8 +217,7 @@
             android:layout_height="match_parent"
             android:layout_marginBottom="10dp"
             android:layout_marginEnd="1dp"
-            android:layout_marginStart="1dp"
-            android:layout_marginTop="1dp">
+            android:layout_marginStart="1dp">
 
             <android.support.constraint.ConstraintLayout
                 android:layout_width="match_parent"
