--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -6,6 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#FAFAFA"
+    android:paddingBottom="55dp"
     tools:context=".Fragments.MainFragment">
 
     <android.support.v4.widget.NestedScrollView
