--- a/app/src/main/res/layout/fragment_media_bar.xml
+++ b/app/src/main/res/layout/fragment_media_bar.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_gravity="bottom"
-    android:background="#cfcfcf"
+    android:background="#80000000"
     tools:context=".Fragments.MediaBarFragment">
 
 
@@ -13,7 +13,9 @@
         android:id="@+id/listeningIcon"
         android:layout_width="50dp"
         android:layout_height="50dp"
+        android:layout_marginBottom="7dp"
         android:layout_marginStart="5dp"
+        android:layout_marginTop="7dp"
         android:scaleType="fitCenter"
         android:src="@drawable/listening_icon_01"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -26,7 +28,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
         android:text="Song Name"
-        android:textColor="#303030"
+        android:textColor="@android:color/white"
         android:textSize="16sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -39,6 +41,7 @@
         android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:text="This is the song description, nice eh?"
+        android:textColor="@android:color/white"
         android:textSize="12sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="@+id/songNameView"
